# MDCS

./: .dockerignore  .env.docker  .gitignore  CLAUDE.md  DOCKER.md  GEMINI.md  LICENSE  README.md  SERVICES_REFACTORING.md  SSE_REMOVAL_SUMMARY.md  WEBSOCKET_CANCELLATION.md  connections.md  docker-compose.yml
backend/: .env.example  .env.test  Dockerfile  README.md  entrypoint.sh  init_db.sql  pyproject.toml  requirements.txt  run_migration.py  test_memory_plugins.py
backend/app/: main.py
backend/app/api/: README.md  chat.py  chat_models.py  chat_with_cancellation.py  connections.py  conversations.py  database.py  messages.py  modules.py  personas.py  templates.py  websocket_chat.py
backend/app/core/: README.md  config.py  script_analyzer.py  script_context.py  script_engine.py  script_plugins.py  trigger_matcher.py
backend/app/database/: README.md  connection.py
backend/app/models/: README.md  __init__.py  base.py  conversation.py  conversation_memory.py  conversation_state.py  module.py  persona.py
backend/app/plugins/: README.md  __init__.py  ai_plugins.py  conversation_plugins.py  core_plugins.py  time_plugins.py
backend/app/services/: README.md  ai_providers.py  cancellation_token.py  chat_session_manager.py  exceptions.py  module_resolver.py  ollama_service.py  ollama_service_with_cancellation.py  openai_service.py  openai_service_base.py  openai_service_with_cancellation.py  staged_module_resolver.py  staged_module_resolver_base.py  staged_module_resolver_with_cancellation.py  streaming_accumulator.py  websocket_manager.py  (+2 more)
backend/tests/: conftest.py
(+167 files in other folders)
